objects/MPW_WIP_Lot__c.object
<CustomObject>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <formula>Manufacturing_Lot__r.Active_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Group_Name__c</fullName>
        <label>Assignment Group Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <inlineHelpText>End Part = This assignment is for End Part ID. There will not be any intermediate part ID.
Intermediate = There will be split to intermediate part before the End part ID</inlineHelpText>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End Part</fullName>
                </value>
                <value>
                    <fullName>Intermediate Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bare_Die_Shipment_Forecast_Date_BL__c</fullName>
        <description>Bare Die Shipment Forecast Date (Base Line)</description>
        <formula>IF( 
	AND(NOT(ISNULL(Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c)), NOT(ISNULL(TEXT(Manufacturing_Lot__r.Fab_Group__c))), NOT(ISBLANK(Delivery_Qty_Die_Form__c))), 
	IF( 
		TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 1&apos;,  
		Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c + 14, 
		IF( 
			OR(TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 2&apos;, TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 3&apos;, TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 3E&apos;, TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 5&apos;, TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 6&apos;, TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 7&apos; ), 
			Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c + 10, 
			IF( 
				TEXT(Manufacturing_Lot__r.Fab_Group__c) == &apos;FAB 8&apos;, 
				Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c + 14, 
				NULL
			)
		) 
	),
	NULL
)</formula>
        <inlineHelpText>Bare Die Shipment Forecast Date (Base Line)</inlineHelpText>
        <label>Bare Die Shipment Forecast Date (BL)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bare_Die_Shipment_Forecast_Date_OR__c</fullName>
        <description>Bare Die Shipment Forecast Date (Override)</description>
        <inlineHelpText>Bare Die Shipment Forecast Date (Override)</inlineHelpText>
        <label>Bare Die Shipment Forecast Date (OR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Fabout_Date__c</fullName>
        <formula>Manufacturing_Lot__r.Planned_Fabout_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Fabout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Lot_Location__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Lot_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lot Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mask_Layer__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Current_Mask_Layer_Being_Processed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mask Layer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Scheduled_Date_CSD_OR__c</fullName>
        <description>Override CSD for MPW WIP Lot report for customer.</description>
        <label>Current Scheduled Date (OR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Scheduled_Date_CSD__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Scheduled Date(CSD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Step_Being_Processed__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Current_Stage_Being_Processed__c )</formula>
        <label>Current Step Being Processed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tapeout_Date__c</fullName>
        <formula>MPW_Prime_Die__r.Customer_Tapeout_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Tapeout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_Die_Form__c</fullName>
        <formula>IF( OR(ISNULL(MPW_Prime_Die__r.Delivery_Qty_Die_Form__c), ISBLANK(MPW_Prime_Die__r.Delivery_Qty_Die_Form__c),  TRIM(MPW_Prime_Die__r.Delivery_Qty_Die_Form__c) == &apos;0&apos; ) , &apos;&apos;, MPW_Prime_Die__r.Delivery_Qty_Die_Form__c)</formula>
        <label>Delivery Qty Die Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>MPW_Prime_Die__r.Geometry__c</formula>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Last_Modified_Date__c</fullName>
        <formula>Manufacturing_Lot__r.LastModifiedDate</formula>
        <label>Lot Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lot_Priority__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Start_Date__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_State__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Lot_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Type__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Category__c</fullName>
        <formula>MPW_Prime_Die__r.MPW_Form__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Form Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Customer_Account_Name__c</fullName>
        <formula>MPW_Prime_Die__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Form Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Customer_Account_Shortname__c</fullName>
        <formula>MPW_Prime_Die__r.MPW_Form__r.Customer_Company_Name__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Form Customer Account Shortname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Status__c</fullName>
        <formula>TEXT( MPW_Prime_Die__r.MPW_Form__r.Form_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Form Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_MES_Part_ID__c</fullName>
        <inlineHelpText>Assign the end part ID for the designated prime die</inlineHelpText>
        <label>MPW MES Part ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Prime_Die__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPW Prime Die</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MPW_Prime_Die__c.MPW_Form__r.Form_Status__c</field>
                <operation>equals</operation>
                <value>Accepted by MPW Tapeout</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MPW_Prime_Die__c</referenceTo>
        <relationshipLabel>MPW WIP Lot</relationshipLabel>
        <relationshipName>MPW_WIP_Lot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPW_Train_Name__c</fullName>
        <formula>MPW_Prime_Die__r.MPW_Train__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Train Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_form__c</fullName>
        <formula>MPW_Prime_Die__r.MPW_Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW form#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Lot_Id__c</fullName>
        <formula>Manufacturing_Lot__r.Manufacturing_Lot_Id__c</formula>
        <label>Manufacturing Lot Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Lot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Manufacturing Lot</label>
        <referenceTo>Manufacturing_Lot__c</referenceTo>
        <relationshipLabel>MPW WIP Lot</relationshipLabel>
        <relationshipName>MPW_WIP_Lot</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Active__c</fullName>
        <formula>Notification_Interval_Days__c &gt; 0 &amp;&amp; NOT(ISNULL(Notification_Start_Date__c )) &amp;&amp; TODAY() &gt;=  Notification_Start_Date__c &amp;&amp; ( ISNULL(Notification_End_Date__c ) || TODAY() &lt;=  Notification_End_Date__c )</formula>
        <label>Notification Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_End_Date__c</fullName>
        <label>Notification End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Interval_Days__c</fullName>
        <inlineHelpText>System will notify the creator in the days interval</inlineHelpText>
        <label>Notification Interval (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Start_Date__c</fullName>
        <label>Notification Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Scheduled_Date__c</fullName>
        <formula>Manufacturing_Lot__r.Original_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Name__c</fullName>
        <formula>MPW_Prime_Die__r.Prime_Die_Name__c</formula>
        <label>Prime Die Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Manufacturing_Lot__r.Process_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Mask_Count__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Remaining_Mask_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Mask Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <formula>Manufacturing_Lot__r.Sales_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <formula>MPW_Prime_Die__r.MPW_Form__r.Sales_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saved_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MPW03371AA-UA0</description>
        <inlineHelpText>The user who save the assignment, will be used by system to trigger notification</inlineHelpText>
        <label>Saved User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_WIP_Lot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Id__c</fullName>
        <formula>Manufacturing_Lot__r.Step_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Manufacturing_Lot__r.Stage_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Technology_Type__c )</formula>
        <label>Technology Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Mask_Count__c</fullName>
        <formula>TEXT( Manufacturing_Lot__r.Total_Mask_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Mask Count</label>
        <type>Text</type>
    </fields>
    <label>MPW WIP Lot</label>
    <nameField>
        <displayFormat>MPWLOT-{00000}</displayFormat>
        <label>MPW WIP Lot No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW WIP Lot</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>